syntax = "proto3";

// 命 令 号: 1026
// 命令名称: voice_effect_play_start
// 命令描述: 播放音效文件
// 文件名称: dec1026_vr_effect_play.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVoiceEffectPlayStart";

message VoiceEffectPlayStartRequest {
  // ATTR: REQUSET
  string file_type = 1; //音效类型
  string file_name = 2; //文件名
  uint32 file_format = 3;
  uint32 session_id = 4;
}

message VoiceEffectPlayStartResponse {

}
